FIxing merch page errors and animation glitch on mobile

--- a/style.css
+++ b/style.css
@@ -329,6 +329,22 @@ iframe {
         padding: 10px 15px; /* Adjust button size */
         font-size: 1em;
     }
+
+    .slide-in{
+        transform: translateX(0);
+        opacity: 1;
+        transition: none;
+    }
+
+    .visible{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+
+    .hidden{
+        opacity: 0;
+        transform: translateX(100px);
+    }
 }
 
 @media (max-width: 480px){
